--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,19 @@ button {
     border-radius: 0.4rem;
     height: 3rem;
     width: 7rem;
-    box-shadow: 2px 2px 2px 1px pink;
+    box-shadow: 2px 2px 2px 1px #f76b8a;
     text-align: center;
     font-size: 1rem;
     transition-duration: 0.4s;
     color:tomato;
+    font-weight: 700;
     
 }
 
 button:hover{
 background-color: pink;
-transform:scale(1.2)
+transform:scale(1.2);
+
 
 }
 
@@ -35,7 +37,7 @@ justify-content: center;
 padding-bottom: 2rem;
 font-size: 4rem;
 font-weight: 2;
-color: tomato;
+color: #f76b8a;
 
 }
 
@@ -49,10 +51,24 @@ h2 {
     
     }
 
-
+/*
 .fontdiner-swanky-regular {
     font-family: "Fontdiner Swanky", serif;
     font-weight: 400;
     font-style: normal;
   }
   
+*/ 
+
+body {
+    font-family: "Fontdiner Swanky", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+p {
+font-size: 1.3rem;
+padding-top: 0.5rem;
+
+}
